Corrected styles on work experience view The overload made the page too wide. Ruben Gomez Dopazo

--- a/components/ui/containers/cards/styles.module.css
+++ b/components/ui/containers/cards/styles.module.css
@@ -71,6 +71,7 @@
 @media screen and (max-width: 768px) {
     .card {
         grid-template-columns: auto;
+        padding: 2em 0;
     }
 
     .cardImage {
